refs#16 alignment of btn fixed

--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -72,7 +72,7 @@
         .img_container{
             .view_prj{
                 opacity: 1 !important;
-                top: 150% !important;
+                top: 120% !important;
             }
             img:hover{
                 opacity: 1 !important;
